slideshow di home
nambahin slidehow di home

--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -13,9 +13,10 @@
 			<div class="dropdown">
     		<button class="menu">MENU</button>
     		<div class="dropdown-content">
-      		<a href="#">Heroes</a>
-      		<a href="#">Buff And Potions</a>
-      		<a href="#">About Us</a>
+					<a href="index.html">Home</a>
+      		<a href="#">Screeshots</a>
+      		<a href="#">Events</a>
+      		<a href="#">Charachters</a>
     		</div>
   		</div>
 			<div>
@@ -33,8 +34,33 @@
 		<span class="change_content"></span>
 	</div>
 	<div class="left">
-		<img src="assets/Logo Frawlsalla.png" alt="design" width="350px" height="350px">
+		<div class="slideshow-container">
+			<div class="slides fade">
+				<div class="numbertext">1 / 4</div>
+				<img src="assets/Logo Frawlsalla.png" alt="design" style="width:100%">
+			</div>
+			<div class="slides fade">
+				<div class="numbertext">2 / 4</div>
+				<img src="assets/slide-1.jpg" alt="ss1"  style="width:100%">
+			</div>
+			<div class="slides fade">
+				<div class="numbertext">3 / 4</div>
+				<img src="assets/slide-2.jpg" alt="ss2"  style="width:100%">
+			</div>
+			<div class="slides fade">
+				<div class="numbertext">4 / 4</div>
+				<img src="assets/slide-3.jpg" alt="ss3"  style="width:100%">
+			</div>
+		</div>
+		<br>
+		<div style="text-align:center">
+  		<span class="dot"></span>
+  		<span class="dot"></span>
+  		<span class="dot"></span>
+			<span class="dot"></span>
+		</div>
 	</div>
+	<script src="assets/javascript/script.js"></script>
 </main>
 <footer>
 <div class="footer-content">
