--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -14,7 +14,6 @@
     		<button class="menu">MENU</button>
     		<div class="dropdown-content">
 					<a href="index.html">Home</a>
-      		<a href="#">Screeshots</a>
       		<a href="#">Events</a>
       		<a href="#">Charachters</a>
     		</div>
@@ -29,7 +28,7 @@
 	<div class="right">
 		<p style="font-size:50px">Welcome To FRAWSALLA</p>
 		<br/>
-		<p style="font-size:40px">In This Game We Can</p>
+		<p style="font-size:40px">In This Game You Can</p>
 		<br>
 		<span class="change_content"></span>
 	</div>
