responsive home(not done)

--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -14,6 +14,7 @@
     		<button class="menu">MENU</button>
     		<div class="dropdown-content">
 					<a href="index.html">Home</a>
+					<a href="play.html" class="small-dev">Play</a>
       		<a href="#">Events</a>
       		<a href="#">Charachters</a>
     		</div>
@@ -25,14 +26,14 @@
 		</nav>
 </header>
 <main>
-	<div class="right">
-		<p style="font-size:50px">Welcome To FRAWSALLA</p>
+	<div class="left">
+		<p>Welcome To FRAWSALLA</p>
 		<br/>
-		<p style="font-size:40px">In This Game You Can</p>
+		<p>In This Game You Can</p>
 		<br>
 		<span class="change_content"></span>
 	</div>
-	<div class="left">
+	<div class="right">
 		<div class="slideshow-container">
 			<div class="slides fade">
 				<div class="numbertext">1 / 4</div>
