--- a/TUGAS HCI/registration.html
+++ b/TUGAS HCI/registration.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styleRegistration.css">
+    <script src="assets/javascript/script.js"></script>
 </head>
-<body onload="validate()">
+<body>
     <h1 style="text-align: center;">REGISTRATION FORM</h1>
     <form name="RegForm" onsubmit=" return validate()" method="post">
         <label>Name :</label>
@@ -34,6 +35,5 @@
                    value="Reset" name="Reset" />
         </p>
     </form>
-    <script src="assets/javascript/script.js"></script>
 </body>
 </html>
