char.html added
belum selesai

--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body>
+<body onload="showSlides()">
 <header>
 	<nav>
 		<div class="logo"><h1>FRAWLSALLA</h1></div>
@@ -16,7 +16,7 @@
 					<a href="index.html">Home</a>
 					<a href="play.html" class="small-dev">Play</a>
       		<a href="#">Events</a>
-      		<a href="#">Charachters</a>
+      		<a href="char.html">Charachters</a>
     		</div>
   		</div>
 			<div>
