fixing char.html

--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -68,7 +68,7 @@
 		<p>Contact Us</p>
 	</div>
 	<div class="copyright">
-		<p>2021 Frawlsalla</p>
+		<p>&copy 2021 Frawlsalla</p>
 	</div>
 	<div class="social">
 		<a href="https://www.instagram.com">
