--- a/TUGAS HCI/char.html
+++ b/TUGAS HCI/char.html
@@ -32,76 +32,53 @@
 	<div class="container">
 		<div class="slides">
 					<img src="assets/characters/centaur.jpg" alt="centaur">
+					<h2>Bradwarden, the Centaur Warrunner</h2>
 				<div class="desc" style="margin-bottom:20px">
-						Bradwarden is the champion of the centaur race, having won his honor by killing every challenger in the arena of Omexe. Awarded the prestigious Great Belt of Omexe for his feat, Bradwarden commands respect, and fellow centaurs rally to join in him combat.<br> Like other centaurs, Bradwarden believes combat to be the ultimate art form, likening swings of his blade to singing.<br>
-						He has accumulated at least a hundred victories in the arena, as evidenced by his Bloodrage Axe, taken from a vanquished warrior.
-						As part of his duties, Bradwarden protects the Gloried Horn of Druud, a sacred relic that calls all centaurs to battle.
-						When he dies, Bradwarden wishes to be buried in the grounds of Omexe.
-						<ul>
-							<li>He appears to have an admiration for Magnus, praising his honor.</li>
-							<li>He dislikes creatures with fewer legs, preferring the company of other four-legged beings, even if they are not centaurs.</li>
-							<li>He shares a background with Disruptor minimap icon.png Disruptor, who is also from Druud.</li>
-						</ul>
-					</div>
+					It's said that a centaur's road is paved with the corpses of the fallen. For the one called Warrunner, it has been a long road indeed. To outsiders, the four-legged clans of Druud are often mistaken for simple, brutish creatures. Their language has no written form; their culture lacks pictographic traditions, structured music, formalized religion. For centaurs, combat is the perfect articulation of thought, the highest expression of self. If killing is an art among centaurs, then Bradwarden the Warrunner is their greatest artist. He rose to dominance on the proving grounds of Omexe, an ancient arena where centaur clans have for millennia gathered to perform their gladiatorial rites. As his fame spread, spectators came from far and wide to see the great centaur in action. Always the first to step into the arena, and the last to leave, he composes a masterpiece in each guttering spray, each thrust of blood-slickened blade-length. It is the poetry of blood on steel, flung in complex patterns across the pale sands of the killing floor.
+					<br><br>
+					Warrunner defeated warrior after warrior, until the arena boomed with the cheering of his name, and he found himself alone, the uncontested champion of his kind. The great belt of Omexe was bestowed, wrapped around his broad torso, but in his victory, the death-artist found only emptiness. For what is a warrior without a challenge? The great centaur galloped out of Omexe that day with a new goal. To his people, Warrunner is the greatest warrior to ever step into the arena. Now he has set out to prove he is the greatest fighter who has ever lived.
+				</div>
 		</div>
 		<!-- ogre -->
 		<div class="slides">
 					<img src="assets/characters/ogre.jpg" alt="centaur">
+					<h2>Aggron Stonebreak, the Ogre Magi</h2>
 				<div class="desc" style="margin-bottom:20px">
-						Bradwarden is the champion of the centaur race, having won his honor by killing every challenger in the arena of Omexe. Awarded the prestigious Great Belt of Omexe for his feat, Bradwarden commands respect, and fellow centaurs rally to join in him combat.<br> Like other centaurs, Bradwarden believes combat to be the ultimate art form, likening swings of his blade to singing.<br>
-						He has accumulated at least a hundred victories in the arena, as evidenced by his Bloodrage Axe, taken from a vanquished warrior.
-						As part of his duties, Bradwarden protects the Gloried Horn of Druud, a sacred relic that calls all centaurs to battle.
-						When he dies, Bradwarden wishes to be buried in the grounds of Omexe.
-						<ul>
-							<li>He appears to have an admiration for Magnus, praising his honor.</li>
-							<li>He dislikes creatures with fewer legs, preferring the company of other four-legged beings, even if they are not centaurs.</li>
-							<li>He shares a background with Disruptor minimap icon.png Disruptor, who is also from Druud.</li>
-						</ul>
+					The ordinary ogre is the creature for whom the phrase 'As dumb as a bag of rock hammers' was coined. In his natural state, an ogre is supremely incapable of doing or deciding anything. Clothed in dirt, he sometimes finds himself accidentally draped in animal skins after eating lanekill. Not an especially social creature, he is most often found affectionately consorting with the boulders or tree-stumps he has mistaken for kin (a factor that may explain the ogre's low rate of reproduction). However, once every generation or so, the ogre race is blessed with the birth of a two-headed Ogre Magi, who is immediately given the traditional name of Aggron Stonebreak, the name of the first and perhaps only wise ogre in their line's history.
+					<br><br>
+					With two heads, Ogre Magi finds it possible to function at a level most other creatures manage with one. And while the Ogre Magi will win no debates (even with itself), it is graced with a divine quality known as Dumb Luck—a propensity for serendipitous strokes of fortune which have allowed the ogre race to flourish in spite of enemies, harsh weather, and an inability to feed itself. It's as if the Goddess of Luck, filled with pity for the sadly inept species, has taken Ogre Magi under her wing. And who could blame her? Poor things.
 					</div>
 		</div>
 		<!-- earth spirit -->
 		<div class="slides">
 					<img src="assets/characters/earthspirit.jpeg" alt="centaur">
+					<h2>Kaolin, the Earth Spirit</h2>
 				<div class="desc" style="margin-bottom:20px">
-						Bradwarden is the champion of the centaur race, having won his honor by killing every challenger in the arena of Omexe. Awarded the prestigious Great Belt of Omexe for his feat, Bradwarden commands respect, and fellow centaurs rally to join in him combat.<br> Like other centaurs, Bradwarden believes combat to be the ultimate art form, likening swings of his blade to singing.<br>
-						He has accumulated at least a hundred victories in the arena, as evidenced by his Bloodrage Axe, taken from a vanquished warrior.
-						As part of his duties, Bradwarden protects the Gloried Horn of Druud, a sacred relic that calls all centaurs to battle.
-						When he dies, Bradwarden wishes to be buried in the grounds of Omexe.
-						<ul>
-							<li>He appears to have an admiration for Magnus, praising his honor.</li>
-							<li>He dislikes creatures with fewer legs, preferring the company of other four-legged beings, even if they are not centaurs.</li>
-							<li>He shares a background with Disruptor minimap icon.png Disruptor, who is also from Druud.</li>
-						</ul>
+					Deep amid the Upland crags and cliffs there runs a seam of sacred jade long foresworn by highland miners. From this rare material, the likeness of the great general Kaolin was carved and buried at the head of a stone funerary army ten thousand strong—a force of soldiers and holy men, jesters and acrobats, carved by crafstmen and entombed for millennia in the dark embrace of the Earth.
+					<br><br>
+					What the craftsmen had not known was that within the strange seam of jade flowed the spirit of the Earth itself—an elemental force at one with the planet. When the force within the carved jade found itself cut off from the life's blood of the world, it gathered its strength over the course of a thousand years and dug itself free and into the light. Now the great Kaolin Earth Spirit strides the Upland roads, fighting for the spirit of the Earth; and in times of need calls forth remnants of his buried army still locked in the loving embrace of the soil.
 					</div>
 		</div>
 		<!-- dazzle -->
 		<div class="slides">
 					<img src="assets/characters/dazzle.jpg" alt="centaur">
+					<h2>Dazzle, the Shadow Priest</h2>
 				<div class="desc" style="margin-bottom:20px">
-						Bradwarden is the champion of the centaur race, having won his honor by killing every challenger in the arena of Omexe. Awarded the prestigious Great Belt of Omexe for his feat, Bradwarden commands respect, and fellow centaurs rally to join in him combat.<br> Like other centaurs, Bradwarden believes combat to be the ultimate art form, likening swings of his blade to singing.<br>
-						He has accumulated at least a hundred victories in the arena, as evidenced by his Bloodrage Axe, taken from a vanquished warrior.
-						As part of his duties, Bradwarden protects the Gloried Horn of Druud, a sacred relic that calls all centaurs to battle.
-						When he dies, Bradwarden wishes to be buried in the grounds of Omexe.
-						<ul>
-							<li>He appears to have an admiration for Magnus, praising his honor.</li>
-							<li>He dislikes creatures with fewer legs, preferring the company of other four-legged beings, even if they are not centaurs.</li>
-							<li>He shares a background with Disruptor minimap icon.png Disruptor, who is also from Druud.</li>
-						</ul>
+					Each young acolyte to the Dezun order must complete a series of rites before becoming a shadow priest. The final rite, the rite of shades, is a harrowing spiritual journey through the Nothl Realm, an unpredictable domain from which not all visitants return. Of those who do, some return mad. Others return with strange aptitudes. But all who go there are changed by their experiences.
+					<br><br>
+					Driven by the need for enlightenment, Dazzle was the youngest of his tribe ever to request the sacred ritual. At first the order refused him, saying he was too young. But Dazzle was not to be dissuaded. Sensing something special in the headstrong young acolyte, the elders relented. Dazzle drank down the sacred potion and sat by the fire while the rest of his tribe danced through the night.
+					<br><br>
+					In this ethereal dimension of the Nothl Realm, the properties of light and dark are inverted. Thus his brilliant healing light, beautiful to our eye, is actually a sinister kind of evil; and the darkest deeds are done in a dazzling glow. The elders' intuition was prophetic: Dazzle returned to his people as a Shadow Priest like none seen before, with the power to heal as well as to destroy. Now he uses his gift to cut down his enemies and mend his friends.
 					</div>
 		</div>
 		<!-- terror blade -->
 		<div class="slides">
 					<img src="assets/characters/terrorblade.jpg" alt="centaur">
+					<h2>Terrorblade, the Demon Marauder</h2>
 				<div class="desc" style="margin-bottom:20px">
-						Bradwarden is the champion of the centaur race, having won his honor by killing every challenger in the arena of Omexe. Awarded the prestigious Great Belt of Omexe for his feat, Bradwarden commands respect, and fellow centaurs rally to join in him combat.<br> Like other centaurs, Bradwarden believes combat to be the ultimate art form, likening swings of his blade to singing.<br>
-						He has accumulated at least a hundred victories in the arena, as evidenced by his Bloodrage Axe, taken from a vanquished warrior.
-						As part of his duties, Bradwarden protects the Gloried Horn of Druud, a sacred relic that calls all centaurs to battle.
-						When he dies, Bradwarden wishes to be buried in the grounds of Omexe.
-						<ul>
-							<li>He appears to have an admiration for Magnus, praising his honor.</li>
-							<li>He dislikes creatures with fewer legs, preferring the company of other four-legged beings, even if they are not centaurs.</li>
-							<li>He shares a background with Disruptor minimap icon.png Disruptor, who is also from Druud.</li>
-						</ul>
+					Terrorblade is the demon marauder—an outlaw hellion whom even other demons fear. A cosmic iconoclast, he stole from the Demon Lords, ignored the codified rites that should have bound his behavior, and broke every law of the seven Infernal Regions. For his crimes, he was taught this lesson: even Hell has a hell. A short, brutal trial ensued, with many dead on all sides, and he was finally incarcerated in Foulfell, a hidden dimension where demonkind imprison their own.
+					<br><br>
+					But Foulfell is no normal prison. In this dark mirror of reality, demons are sentenced to gaze eternally into the twisted reflection of their own souls. But instead of suffering, Terrorblade made himself master of his own reflected worst self—a raging, thieving demon of unimaginable power. With his inner beast under sway, he destroyed the fractal prison walls and burst free to turn his terror loose upon all creation.
 					</div>
 		</div>
 		<button class="btn left" onclick="plusDivs(-1)">&#10094;</button>
@@ -114,7 +91,7 @@
 		<p>Contact Us</p>
 	</div>
 	<div class="copyright">
-		<p>2021 Frawlsalla</p>
+		<p>&copy 2021 Frawlsalla</p>
 	</div>
 	<div class="social">
 		<a href="https://www.instagram.com">
