--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -20,7 +20,7 @@
     		</div>
   		</div>
 			<div>
-				<button class="play" onclick="window.location.href = 'registration.html';">PLAY</button>
+				<button class="play" onclick="window.location.href = 'play.html';">PLAY</button>
 			</div>
 		</div>
 		</nav>
