--- a/TUGAS HCI/index.html
+++ b/TUGAS HCI/index.html
@@ -52,13 +52,14 @@
 				<div class="numbertext">4 / 4</div>
 				<img src="assets/slide-3.jpg" alt="ss3"  style="width:100%">
 			</div>
+				
 		</div>
 		<br>
 		<div style="text-align:center">
-  		<span class="dot"></span>
-  		<span class="dot"></span>
-  		<span class="dot"></span>
-			<span class="dot"></span>
+  		<span class="dot" onclick="currentSlide(0)"></span>
+  		<span class="dot" onclick="currentSlide(1)"></span>
+  		<span class="dot" onclick="currentSlide(2)"></span>
+			<span class="dot" onclick="currentSlide(3)"></span>
 		</div>
 	</div>
 	<script src="assets/javascript/script.js"></script>
